Authorization|Aquib Ahmad|protect routes based on permissions
